FreeST/test/Programs/InvalidTests/SessionTypes/sendOnInChannel/sendOnInChannel.fst
f : ?Int -> Skip
f c = send c 5

main : Int
main = 5
